Final version Que app
Eindresultaat Que App Lau de Hoop MD1B
(Niet alle pagina's werken uiteraard)
(Wel werkend: Maandag, Opstaan, Douchen)
[Bekijk op mobiele modus in je browser]

--- a/opgeroepen.html
+++ b/opgeroepen.html
@@ -9,23 +9,25 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<title>Que | Login</title>
+		<title>Que | Oproep verzonden</title>
 	</head>
-	<body>
-		<nav>
-			<p id="back"><a href="index.html"><b><</b>Terug</a></p>
-		</nav>
-		<div class="logo-container">
-			<img src="img/Que_logo.png" id="que-logo">
+	<body class="opgeroepen">
+		<div class="startpagina">
+			<img src="ico/oproep.svg" id="hulp-logo">
+			<br>
+			<h2 id="witte-tekst">De oproep is verzonden.</h2>
+			<br>
+			<h1 id="witte-tekst">Hulp is onderweg!</h1>
+			<br>
+			<p id="witte-tekst">Je begeleider komt er zo snel mogelijk aan om je te helpen.</p>
 		</div>
-		<div class="registreer">
-			<form action="home.html">
-				<p>e-mail</p>
-				<input type="email" placeholder="iemand@voorbeeld.nl">
-				<p>wachtwoord</p>
-				<input type="password">
-				<input type="submit" value="OK" id="opsturen">
-			</form>
+		<div class="startpagina">
+			<a href="week.html">
+				<div class="terugkeren">
+					<img src="ico/arr-cir-lef.svg" id="arr-cir-lef">
+					<h2 id="rode-tekst">Tik hier om terug te gaan</h2>
+				</div>
+			</a>
 		</div>
 	</body>
 </html>
